--- a/src/_scss/_common.scss
+++ b/src/_scss/_common.scss
@@ -8,8 +8,8 @@ $color-vault-black: #16272f;
 $color-vault-purple: rgb(208, 93, 153);
 $color-vault-white: #f8fbff;
 $color-vault-faded-green: #bff7cb;
-$color-vault-lilac: #d1c5f8;
-$color-vault-lilac-dark: #8767f0;
+$color-vault-blue: #1e2f79;
+$color-vault-blue-dark: #0F1842;
 $color-vault-banana: #fcf0bc;
 $color-vault-green: #60d186;
 $color-vault-emerald: #1c4550;
