--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -9,15 +9,20 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+.btn {
+	background-color: common.$color-vault-white;
+	border: none;
+}
 
 .page {
 	padding-top: 92px;
 	min-height: 780px;
+	align-content: center;
 }
 
 .pageContent {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: center;
 	font-family: "Helvetica", "Arial", sans-serif;
 }
@@ -40,35 +45,34 @@ body {
 .icon {
 	padding-left: 20px;
 }
-.dropzoneText{
+.dropzoneText {
 	margin: auto;
 	align-items: center;
-	padding-top:80px;
+	padding-top: 15%;
 	width: 50%;
 }
-.dropzoneIcon{
-	margin:auto;
+.dropzoneIcon {
+	margin: auto;
 	align-items: center;
-	padding-top: 70px;
+	padding-top: 10%;
 	height: 50px;
 }
-.horizontalContainer{
+.horizontalContainer {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-
 }
-.setupSection{
-	height:80vh;
+.setupSection {
+	height: 80vh;
 }
-.chatSection{
-	height:80vh;
+.chatSection {
+	height: 80vh;
 }
 
 .text {
 	color: common.$color-vault-black;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: center;
 	width: 100%;
 
@@ -85,185 +89,195 @@ body {
 
 	.workArea {
 		display: flex;
+		flex-direction: row;
 		width: 100%;
 		height: auto;
+		align-items: center;
+
 
 		.leftColumn {
-			display: flex;
+			display: inline-flex;
 			flex-direction: column;
 			align-items: center;
 			width: 100%;
+		}
 
-			.dropzone {
-				border: 2px dashed common.$color-vault-blue;
+		.rightColumn {
+			display: flex;
+			flex-direction: block;
+			align-items: center;
+			width: 100%;
+		}
+
+		.dropzone {
+			border: 2px dashed common.$color-vault-blue;
+			border-radius: 4px;
+			margin-top: 20px;
+			padding: 20px;
+			width: 100%;
+			height: 400px;
+			text-align: center;
+			cursor: pointer;
+			font-size: 24px;
+			color: common.$color-vault-blue-dark;
+			transition: 100ms ease-in;
+
+			&:hover {
+				background-color: common.$color-vault-blue-dark;
+				color: common.$color-vault-white;
+			}
+
+			&.dropzoneLoading {
+				cursor: inherit;
+				animation: background-color-animation 5s infinite;
+			}
+		}
+
+		.fileList {
+			margin-top: 32px;
+
+			.successfulFiles,
+			.failedFiles {
+				ul {
+					list-style-type: none;
+					padding-inline-start: 0;
+				}
+
+				li {
+					padding: 4px 0;
+				}
+			}
+
+			.successfulFiles {
+				color: common.$color-vault-green;
+			}
+
+			.failedFiles {
+				color: common.$color-vault-purple;
+			}
+		}
+
+		.questionInput {
+			margin-top: 16px;
+			display: flex;
+			width: 100%;
+
+			input {
+				flex-grow: 1;
+				border: 1px solid common.$color-vault-blue-dark;
 				border-radius: 4px;
-				margin-top: 20px;
-				padding: 20px;
-				width: 100%;
-				height: 400px;
-				text-align: center;
+				padding: 8px;
+				outline: none;
+				font-size: 14px;
+				min-width: 30px;
+
+				&:focus {
+					border-color: common.$color-vault-blue;
+				}
+			}
+
+			button {
+				margin-left: 8px;
+				border: none;
+				color: common.$color-vault-white;
+				padding: 4px 12px;
+				border-radius: 4px;
 				cursor: pointer;
-				font-size: 24px;
-				color: common.$color-vault-blue-dark;
-				transition: 100ms ease-in;
+				font-size: 14px;
+				font-weight: 400;
+				transition: background-color 100ms;
 
 				&:hover {
 					background-color: common.$color-vault-blue;
-					color: common.$color-vault-white;
-				}
-
-				&.dropzoneLoading {
-					cursor: inherit;
-					animation: background-color-animation 5s infinite;
 				}
 			}
 
-			.fileList {
-				margin-top: 32px;
-
-				.successfulFiles,
-				.failedFiles {
-					ul {
-						list-style-type: none;
-						padding-inline-start: 0;
-					}
-
-					li {
-						padding: 4px 0;
-					}
-				}
-
-				.successfulFiles {
-					color: common.$color-vault-green;
-				}
-
-				.failedFiles {
-					color: common.$color-vault-purple;
-				}
+			.askQuestionDisabled {
+				background-color: common.$color-vault-blue;
+				cursor: inherit;
 			}
 
-			.questionInput {
-				margin-top: 16px;
-				display: flex;
-				width: 100%;
+			.askQuestion {
+				background-color: common.$color-vault-blue-dark;
+			}
+		}
 
-				input {
-					flex-grow: 1;
-					border: 1px solid common.$color-vault-blue-dark;
-					border-radius: 4px;
-					padding: 8px;
-					outline: none;
-					font-size: 14px;
-					min-width: 30px;
+		.tokenCount {
+			margin-top: 8px;
+			margin-bottom: 8px;
+			color: common.$color-vault-blue-dark;
+			font-size: 10px;
+		}
 
-					&:focus {
-						border-color: common.$color-vault-blue;
-					}
-				}
+		.responseDisplay {
+			width: 100%;
 
-				button {
-					margin-left: 8px;
-					border: none;
-					color: common.$color-vault-white;
-					padding: 4px 12px;
-					border-radius: 4px;
-					cursor: pointer;
-					font-size: 14px;
-					font-weight: 400;
-					transition: background-color 100ms;
-
-					&:hover {
-						background-color: common.$color-vault-blue;
-					}
-				}
-
-				.askQuestionDisabled {
-					background-color: common.$color-vault-blue;
-					cursor: inherit;
-				}
-
-				.askQuestion {
-					background-color: common.$color-vault-blue-dark;
-				}
+			h3 {
+				margin-block-start: 0;
 			}
 
-			.tokenCount {
-				margin-top: 8px;
-				margin-bottom: 8px;
-				color: common.$color-vault-blue-dark;
-				font-size: 10px;
+			.answer {
+				margin-top: 24px;
+				margin-bottom: 16px;
+				font-size: 24px;
 			}
 
-			.responseDisplay {
-				width: 100%;
-
-				h3 {
-					margin-block-start: 0;
-				}
-
-				.answer {
-					margin-top: 24px;
+			.contexts {
+				margin-bottom: 64px;
+				.contextSnippet {
 					margin-bottom: 16px;
-					font-size: 24px;
-				}
 
-				.contexts {
-					margin-bottom: 64px;
-					.contextSnippet {
-						margin-bottom: 16px;
+					h4 {
+						cursor: pointer;
+						display: flex;
+						align-items: center;
+						color: common.$color-vault-blue-dark;
+						font-weight: 400;
+						padding-top: 30px;
 
-						h4 {
-							cursor: pointer;
+						.title {
+							font-weight: 100;
+							margin-left: 14px;
+							padding: 14px;
+							border: 1px solid common.$color-vault-blue-dark;
+							border-radius: 14px;
 							display: flex;
 							align-items: center;
-							color: common.$color-vault-blue-dark;
-							font-weight: 400;
-							padding-top: 30px;
 
-							.title {
-								font-weight: 100;
+							.arrow {
 								margin-left: 14px;
-								padding: 14px;
-								border: 1px solid common.$color-vault-blue-dark;
-								border-radius: 14px;
-								display: flex;
-								align-items: center;
-
-								.arrow {
-									margin-left: 14px;
-									font-stretch: expanded;
-									font-size: 14px;
-									transform: scaleY(0.75);
-								}
-							}
-
-							svg {
-								margin-left: 8px;
-								transition: transform 0.3s;
-							}
-
-							&.collapsed svg {
-								transform: rotate(-90deg);
+								font-stretch: expanded;
+								font-size: 14px;
+								transform: scaleY(0.75);
 							}
 						}
 
-						.content {
-							overflow: hidden;
-							max-height: 0;
-							transition: max-height 0.3s ease-in-out;
-
-							&.expanded {
-								max-height: 500px;
-							}
+						svg {
+							margin-left: 8px;
+							transition: transform 0.3s;
 						}
 
-						.preview {
-							display: inline;
-							white-space: nowrap;
-							overflow: hidden;
-							text-overflow: ellipsis;
-							max-width: 90%;
+						&.collapsed svg {
+							transform: rotate(-90deg);
 						}
+					}
+
+					.content {
+						overflow: hidden;
+						max-height: 0;
+						transition: max-height 0.3s ease-in-out;
+
+						&.expanded {
+							max-height: 500px;
+						}
+					}
+
+					.preview {
+						display: inline;
+						white-space: nowrap;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						max-width: 90%;
 					}
 				}
 			}
