--- a/src/_scss/_fonts.scss
+++ b/src/_scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'Urbanist', sans-serif;
     font-style: normal;
-    src: url("../assets/css/montserrat.woff2") format('woff2'),
-        url("../assets/css/montserrat.woff") format('woff');
+    src: url("../assets/css/Urbanist-Italic-VariableFont_wght") format('ttf'),
+        url("../assets/css/Urbanist-VariableFont_wght") format('ttf');
 }
