--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ html {
     box-sizing: border-box;
     height: 100%;
 
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Urbanist', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
@@ -19,7 +19,8 @@ html {
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    font-family: 'Urbanist', sans-serif;
+    font-style: normal;
 }
 
 body {
@@ -27,17 +28,15 @@ body {
     padding: 0;
     max-width: 100%;
     height: 100%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: 'Urbanist', sans-serif;
+    font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 textarea {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: 'Urbanist', sans-serif;
+    font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
