latest ui updates

--- a/src/_scss/_common.scss
+++ b/src/_scss/_common.scss
@@ -4,7 +4,7 @@
 $color-nugbase-light-grey: rgb(239, 240, 241);
 $color-vault-background-dark-grey: #181816;
 $color-vault-background-darker-grey: #141412;
-$color-vault-black: #16272f;
+$color-vault-black: #000;
 $color-vault-purple: rgb(208, 93, 153);
 $color-vault-white: #f8fbff;
 $color-vault-faded-green: #bff7cb;
