Updated answer state, created dropzone success state in CSS

--- a/src/_scss/_common.scss
+++ b/src/_scss/_common.scss
@@ -11,7 +11,7 @@ $color-vault-faded-green: #bff7cb;
 $color-vault-blue: #1e2f79;
 $color-vault-blue-dark: #0f1842;
 $color-vault-banana: #fcf0bc;
-$color-vault-green: #60d186;
+$color-vault-green: #0ab342;
 $color-vault-emerald: #1c4550;
 $color-vault-firefly: #16272e;
 $color-vault-gray: #84878b;
