--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -86,20 +86,16 @@ body {
 
 	border-radius: 8px;
 	margin: 10px;
+
 	text-align: center;
 	cursor: pointer;
 	font-size: 24px;
-	font-weight: 500;
+	font-weight: 500!important;
 	color: common.$color-vault-black;
 	transition: 300ms ease-in;
 	display: flex;
 	  align-items: center;
 	  justify-content: center;
-
-	&:hover {
-		background-color: common.$color-vault-blue-dark;
-		color: common.$color-vault-white;
-	}
 
 }
 
@@ -235,6 +231,10 @@ body {
 				cursor: inherit;
 				animation: background-color-animation 5s infinite;
 			}
+			&.dropzoneLoaded{
+				cursor: inherit;
+				background-color: common.$color-vault-green;
+			}
 		}
 
 		.fileList {
@@ -329,8 +329,9 @@ body {
 
 			.answer {
 				margin-top: 24px;
-				margin-bottom: 16px;
-				font-size: 14px;
+				margin-bottom: 32px;
+				font-size: 20px;
+				font-weight: 900;
 
 			}
 
@@ -422,10 +423,12 @@ h3 {
 	border: 4px solid #f3f3f3;
 	border-radius: 50%;
 	border-top: 4px solid common.$color-vault-blue;
-	width: 40px;
-	height: 40px;
-	animation: spin 2s linear infinite;
+	width: 20px;
+	height: 20px;
+	animation: spin 1s linear infinite;
 	margin-left: 8px;
+	margin-top:8px;
+	justify-content: center;
 }
 
 @keyframes spin {
